[project]
name = "tdir"
version = "1.8.2"
description = "🗃 Create and fill a temporary directory 🗃"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dek",
    "xmod",
]

[project.urls]
Homepage = "https://github.com/rec/tdir"
Repository = "https://github.com/rec/tdir"
Documentation = "https://rec.github.io/tdir"

[tool.doks]
auto = true

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pyupgrade>=3.21.2",
    "ruff",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""
source-include = ["tdir.pyi/**"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["tdir"]

[tool.coverage.report]
fail_under = "93"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

